--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@next/third-parties": "^15.5.4",
     "next": "^15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
